--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Bende diyorum ki:
 <!-- Final -->
 <section class="final">
     <h1>SENİ ÇOK SEVİYORUM ❤️</h1>
-    <img src="https://imgur.com/a/5KxhqDg" alt="Bizim Fotoğrafımız">
+    <img src="https://i.imgur.com/3JWVwwD.jpeg" alt="Bizim Fotoğrafımız">
 </section>
 
 <script>
