--- a/index.html
+++ b/index.html
@@ -261,23 +261,12 @@ Bende diyorum ki:
 <!-- Game Section -->
 <section class="game-section">
     <h2>Zeynep’i Yakala 🎮</h2>
-    <canvas id="gameCanvas" width="500" height="300"></canvas>
+    <canvas id="gameCanvas" width="600" height="300"></canvas>
     <button class="retry-btn" onclick="resetGame()">Tekrar Dene</button>
     <p>Boşluk tuşu veya ekrana dokunarak zıpla</p>
 </section>
 
 <script>
-    // Scroll Animation
-    const poems = document.querySelectorAll('.poem');
-    window.addEventListener('scroll', () => {
-        poems.forEach(poem => {
-            if(poem.getBoundingClientRect().top < window.innerHeight - 100) {
-                poem.classList.add('visible');
-            }
-        });
-    });
-
-    // Game Setup
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
@@ -287,7 +276,7 @@ Bende diyorum ki:
     const targetImg = new Image();
     targetImg.src = "https://i.imgur.com/DKHf9UD.jpeg";
 
-    let player = { x: 50, y: 230, w: 50, h: 50, dy: 0, gravity: 0.5, jump: -9, grounded: false };
+    let player = { x: 50, y: 280, w: 50, h: 50, dy: 0, gravity: 0.4, jump: -8, grounded: false };
     let obstacles = [];
     let score = 0;
     let gameOver = false;
@@ -324,6 +313,7 @@ Bende diyorum ki:
 
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+        // Player hareket
         player.y += player.dy;
         player.dy += player.gravity;
 
@@ -333,10 +323,12 @@ Bende diyorum ki:
             player.grounded = true;
         }
 
-        targetX += targetDir * 1;
+        // Hedef animasyonu
+        targetX += targetDir * 0.5; // daha yavaş
         if(targetX > canvas.width - 70 || targetX < canvas.width - 150) targetDir *= -1;
 
-        obstacles.forEach(ob => { ob.x -= 3; });
+        // Engeller
+        obstacles.forEach(ob => { ob.x -= 2; }); // daha yavaş
 
         if(obstacles.length === 0 || obstacles[obstacles.length - 1].x < 300) {
             obstacles.push({ x: canvas.width, y: canvas.height - 40, w: 30, h: 20 });
@@ -344,17 +336,19 @@ Bende diyorum ki:
 
         obstacles = obstacles.filter(ob => ob.x + ob.w > 0);
 
+        // Çarpışma kontrolü
         obstacles.forEach(ob => {
             if(player.x < ob.x + ob.w && player.x + player.w > ob.x && player.y + player.h > ob.y) {
                 endGame();
             }
         });
 
-        score += 0.1;
+        // Skor
+        score += 0.07; // daha yavaş ilerle
         if(score >= 100) {
             ctx.fillStyle = "#ff4081";
             ctx.font = "30px Roboto";
-            ctx.fillText("Tebrikler! Zeynep'i Yakaladın ❤️", 50, canvas.height / 2);
+            ctx.fillText("Tebrikler! Zeynep'i Yakaladın ❤️", 80, canvas.height / 2);
             gameOver = true;
             document.querySelector('.retry-btn').style.display = 'block';
             return;
@@ -380,12 +374,12 @@ Bende diyorum ki:
         gameOver = true;
         ctx.fillStyle = "#ff4081";
         ctx.font = "30px Roboto";
-        ctx.fillText("Kaybettin! Tekrar dene 💔", 100, canvas.height / 2);
+        ctx.fillText("Kaybettin! Tekrar dene 💔", 150, canvas.height / 2);
         document.querySelector('.retry-btn').style.display = 'block';
     }
 
     function resetGame() {
-        player.y = 230;
+        player.y = 280;
         player.dy = 0;
         obstacles = [];
         score = 0;
@@ -399,6 +393,7 @@ Bende diyorum ki:
 
     update();
 </script>
+
 
 </body>
 </html>
