--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <!-- Landing -->
 <section class="landing">
     <h1>İyi ki doğdun Prensesim Zeynep</h1>
-    <p>Burası senin diyarın Hoşgeldin &lt;3</p>
+    <p>Burası senin diyarın Hoşgeldin &lt;3 <br> OSURUK BÖCEĞİ</p>
     <button class="btn" onclick="document.getElementById('poems').scrollIntoView()">Devam Et</button>
 </section>
 
